--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-
-    <header>
+    <!-- <header> использовал для шапки сайта, в ней название сайта и навигация -->
+    <header> 
         <h1>Прогноз погоды в Москве</h1>
+        <!-- <nav> навигация по сайту -->
         <nav>
             <a href="#">Главная</a>
             <a href="#">О нас</a>
@@ -16,14 +17,17 @@
         </nav>
     </header>
     
+    <!-- <main> для содержания основной информации страницы-->
     <main>
-        <section>
+        <!-- <section> в секции написал основной краткий прогноз -->
+        <section> 
             <h2>Погода сегодня</h2>
             <li><b>Текущие условия:</b> ясно, слабый ветер</li>
             <li><b>Температура:</b> +16°C</li>
             <li><b>Влажность:</b> 65 %</li>
         </section>
 
+        <!-- <artricle> здесь уже написал более подробный прогноз на сегодня -->
         <article>
             <h2>Прогноз на день</h2>
             <h3>Дневной прогноз:</h3>
@@ -37,11 +41,14 @@
 
         </article>
 
-        <figure>
+        <!-- <figure> использовал для размещения картинки на страницу  -->
+        <figure> 
+            <!-- <figcaption> для комментария к картинке -->
             <figcaption><p><b>Картинка сегодняешнего дня</b></p></figcaption>
             <img src="https://cdn3.iconfinder.com/data/icons/picons-weather/57/04_variable_clouds-512.png">
         </figure>
 
+        <!-- <acide> использовал для размещения рекламы на странице -->
         <aside>
             <p><small><b>Реклама(все права защищены)</b></small><p>
             <p><small>Не жди осенней переменчивости. Будь готов.<br>
@@ -52,6 +59,7 @@
 
     <maim/>    
 
+    <!-- <footer> для содержания нижней части страницы, конгтакты, такие как почта и телефон -->
     <footer>
         <h2 id="Contacts">Контакты</h2>
         <li> <a href="mailto:andrgsv@bk.ru">andrgsv@bk.ru</a></li>
